wrapping up issues donut

--- a/src/assets/crisistextline/sass/partials/04-structures/_user-profile.scss
+++ b/src/assets/crisistextline/sass/partials/04-structures/_user-profile.scss
@@ -18,7 +18,6 @@ $popup-quote-lines: 3;
     }
     .section-name, .field-name {
         color: white;
-        // font-weight: bold;
         padding: .5rem 1rem;
     }
     .field-content {
@@ -47,7 +46,7 @@ $popup-quote-lines: 3;
                 }
             }
             .background-shape {
-                fill: $color-med;
+                fill: $color-med-light;
             }
             @for $i from 1 through 4 {
                 .zone-#{$i} {
@@ -68,12 +67,10 @@ $popup-quote-lines: 3;
             rect {
                 fill: $color-blue;
             }
-            .labels {
-                text {
-                    fill: white;
-                    &.lowVal {
-                        fill: $color-dark;
-                    }
+            .labels text {
+                fill: white;
+                &.lowVal {
+                    fill: $color-dark;
                 }
             }
         }
@@ -105,8 +102,17 @@ $popup-quote-lines: 3;
         }
         &.cc-issue-types {
             .field-content svg {
-                .shapes, .legend {
+                .shapes, .snippet {
                     fill: $color-green;
+                }
+                .background-shape {
+                    fill: transparent;
+                }
+                .shapes, .legend, .labels {
+                    cursor: pointer;
+                }
+                .labels text {
+                    fill: white;
                 }
             }
         }
